force-app/main/default/objects/Community_Resource_Tag__c/Community_Resource_Tag__c.object-meta.xml
<CustomObject>
    <description>This object allows tags to be associated with a Resource record.</description>
    <label>Community Resource Tag</label>
    <nameField>
        <displayFormat>CRT-{yy}{mm}{0}</displayFormat>
        <label>Community Resource Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Resource Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>