force-app/main/default/objects/Community_Resource_Tag__c/fields/Community_Tag__c.field-meta.xml
<CustomField>
    <fullName>Community_Tag__c</fullName>
    <description>This defines the Tag that is being associated to the Resource</description>
    <label>Community Tag</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Community_Tag__c.Community_Theme__r.Theme_Type__c</field>
            <operation>equals</operation>
            <value>Interest, System</value>
        </filterItems>
        <infoMessage>You can only select Tags where Theme Type = Interest.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Community_Tag__c</referenceTo>
    <relationshipLabel>Resource Items Tagged</relationshipLabel>
    <relationshipName>Community_ResourceItems_Tagged</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>