force-app/main/default/objects/Community_Resource_Tag__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <description>This defines the Resource that is being associated with the Tag.</description>
    <label>Resource</label>
    <referenceTo>Community_Resource__c</referenceTo>
    <relationshipLabel>Resource Tags</relationshipLabel>
    <relationshipName>Community_Resource_Tags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>