force-app/main/default/objects/Community_Resource_Tag__c/fields/Resource_Tag_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Resource_Tag_SF_ID__c</fullName>
    <description>Represents the 18 digit unique Salesforce ID.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the 18 digit unique Salesforce ID.</inlineHelpText>
    <label>Resource Tag SF ID</label>
    <type>Text</type>
</CustomField>