force-app/main/default/objects/Community_Resource_Tag__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <description>Represents the Theme that related Tag is associated with.</description>
    <formula>HYPERLINK(&quot;/&quot;&amp; Community_Tag__r.Id , Community_Tag__r.Name ,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Theme the Tag is associated with.</inlineHelpText>
    <label>Theme</label>
    <type>Text</type>
</CustomField>